[gd_scene load_steps=25 format=3 uid="uid://2nps2evg3bsm"]

[ext_resource type="Texture2D" uid="uid://dlti5x7jgy57m" path="res://Downloads/Adventurer/adventurer-Sheet.png" id="1_d11cv"]
[ext_resource type="Script" path="res://player.gd" id="1_ypet8"]
[ext_resource type="Texture2D" uid="uid://b1y5rkvr8oekk" path="res://Downloads/Adventurer/black-circle.png" id="3_0s4hf"]
[ext_resource type="Script" path="res://Snippets/Health.gd" id="4_3kmln"]
[ext_resource type="Script" path="res://Snippets/TakeDamage.gd" id="5_n32mn"]
[ext_resource type="PackedScene" uid="uid://bdomxuy3h6a3h" path="res://Snippets/movement_turn.tscn" id="6_nllu8"]
[ext_resource type="Script" path="res://Snippets/HealthBar.gd" id="7_v73uc"]
[ext_resource type="Script" path="res://RockThrow.gd" id="8_gtgxj"]
[ext_resource type="Script" path="res://Pointer.gd" id="9_scuth"]
[ext_resource type="Texture2D" uid="uid://dy0dp13nqr5fe" path="res://Arrow.png" id="10_qtm7h"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4kufy"]
size = Vector2(12, 5)

[sub_resource type="AtlasTexture" id="AtlasTexture_jcbl2"]
atlas = ExtResource("1_d11cv")
region = Rect2(0, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_rv5ex"]
atlas = ExtResource("1_d11cv")
region = Rect2(50, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_4npau"]
atlas = ExtResource("1_d11cv")
region = Rect2(100, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_8fs0m"]
atlas = ExtResource("1_d11cv")
region = Rect2(150, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_qs333"]
atlas = ExtResource("1_d11cv")
region = Rect2(50, 37, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_ghoj5"]
atlas = ExtResource("1_d11cv")
region = Rect2(100, 37, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_0v5ne"]
atlas = ExtResource("1_d11cv")
region = Rect2(150, 37, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_1qhh6"]
atlas = ExtResource("1_d11cv")
region = Rect2(200, 37, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_pe5rq"]
atlas = ExtResource("1_d11cv")
region = Rect2(250, 37, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_jed3h"]
atlas = ExtResource("1_d11cv")
region = Rect2(300, 37, 50, 37)

[sub_resource type="SpriteFrames" id="SpriteFrames_4ctt6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jcbl2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rv5ex")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4npau")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8fs0m")
}],
"loop": true,
"name": &"Idle",
"speed": 4.0
}, {
"frames": [{
"duration": 0.5,
"texture": SubResource("AtlasTexture_qs333")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_ghoj5")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_0v5ne")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_1qhh6")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_pe5rq")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_jed3h")
}],
"loop": true,
"name": &"Walk",
"speed": 4.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0lwfi"]
bg_color = Color(0.0980392, 0.0980392, 0.0980392, 0.784314)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dadwk"]
bg_color = Color(1, 0, 0, 0.784314)

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("Animated_Sprite")]
script = ExtResource("1_ypet8")
Animated_Sprite = NodePath("AnimatedSprite")
SPEED = 50

[node name="CollisionShape" type="CollisionShape2D" parent="."]
position = Vector2(1, -2.5)
shape = SubResource("RectangleShape2D_4kufy")

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="."]
z_index = 1
position = Vector2(-1, -17.5)
sprite_frames = SubResource("SpriteFrames_4ctt6")
animation = &"Idle"
autoplay = "Idle"
frame_progress = 0.400544

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, -29)
zoom = Vector2(3, 3)

[node name="Shadow" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.490196)
position = Vector2(-1, 0)
scale = Vector2(-0.042003, 0.0108418)
texture = ExtResource("3_0s4hf")

[node name="Health" type="Node2D" parent="."]
script = ExtResource("4_3kmln")

[node name="RegenCD" type="Timer" parent="Health"]

[node name="TakeDamage" type="Node2D" parent="." node_paths=PackedStringArray("HealthNode")]
script = ExtResource("5_n32mn")
HealthNode = NodePath("../Health")

[node name="TakeDMG_CD" type="Timer" parent="TakeDamage"]
one_shot = true

[node name="Player" type="Node" parent="."]

[node name="MovementTurn" parent="." node_paths=PackedStringArray("Character_Body", "Animated_Sprite") instance=ExtResource("6_nllu8")]
editor_description = "Turns sprite to match the direction of velocity.x"
Character_Body = NodePath("..")
Animated_Sprite = NodePath("../AnimatedSprite")

[node name="HealthBar" type="ProgressBar" parent="." node_paths=PackedStringArray("HealthNode")]
offset_left = -11.0
offset_top = -37.0
offset_right = -7.0
offset_bottom = -10.0
scale = Vector2(4.95025, 0.140374)
theme_override_styles/background = SubResource("StyleBoxFlat_0lwfi")
theme_override_styles/fill = SubResource("StyleBoxFlat_dadwk")
show_percentage = false
script = ExtResource("7_v73uc")
HealthNode = NodePath("../Health")

[node name="Shoot" type="Node2D" parent="." node_paths=PackedStringArray("Player")]
position = Vector2(-1, -16)
script = ExtResource("8_gtgxj")
Player = NodePath("..")

[node name="FireRate" type="Timer" parent="Shoot"]
autostart = true

[node name="Pointer" type="Node2D" parent="."]
position = Vector2(-1, -16)
script = ExtResource("9_scuth")

[node name="Arrow" type="Sprite2D" parent="Pointer"]
position = Vector2(25, 0)
scale = Vector2(0.475365, 0.75)
texture = ExtResource("10_qtm7h")

[connection signal="timeout" from="Health/RegenCD" to="Health" method="RegenTimeout"]
[connection signal="timeout" from="TakeDamage/TakeDMG_CD" to="TakeDamage" method="OnDamageTakenCD"]
[connection signal="timeout" from="Shoot/FireRate" to="Shoot" method="_on_firerate_timeout"]
